[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ScrollContainer" parent="."]
margin_right = 12.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerList"]

[node name="ChatWindow" type="ScrollContainer" parent="."]
margin_right = 400.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ChatWindow"]
margin_right = 400.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MessageEdit" type="LineEdit" parent="."]
margin_right = 58.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyToggle" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Set not ready"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tree_exiting" from="." to="." method="_exitingTree"]
[connection signal="text_entered" from="MessageEdit" to="." method="_messageEntered"]
[connection signal="pressed" from="StartButton" to="." method="startButtonPressed"]
[connection signal="pressed" from="ReadyToggle" to="." method="readyTogglePressed"]
